<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="zhengpingbaoyou3c">正品全场3c包邮</string>
    <string name="In24hoursfahuo">24小时内发货</string>
    <string name="seven_days_tui_huo_noreason">七天无理由退货</string>
    <string name="app_name">淘竹马</string>
    <string name="btn_text_order">查看订单</string>
    <string name="more_recommend">更多推荐</string>
    <string name="consumer_hotline">4001503677</string>
    <string name="consumer_service_item1">拨打客服电话 4001503677</string>
    <string name="QQ_package_names">com.tencent.mobileqq</string>
    <string name="WeChat_package_names">com.tencent.mm</string>
    <string name="Item_No">产品货号：</string>
    <string name="shipping_instructions">运费说明：</string>
    <string name="shipment">包邮 (偏远地区除外)</string>
    <string name="are_electric">是否电动：</string>
    <string name="product_material">产品材质：</string>
    <string name="product_weight">产品重量：</string>
    <string name="place_of_origin">源自产地：</string>
    <string name="packing">包装方式：</string>
    <string name="app_string2">继续拖动，查看图文详情</string>
    <string name="commodity">商品: </string>
    <string name="Ship">发货: </string>
    <string name="logistics">物流: </string>
    <string name="graphic_details">图文详情</string>
    <string name="you_may_also_like">猜你喜欢</string>
    <string name="determine">确定</string>
    <string name="aover">抢购已结束</string>
    <string name="my_wallet_balance">我的钱包余额(元)</string>
    <string name="recording">记录</string>
    <string name="balance_details">余额明细</string>
    <string name="select_address_tips">(选择收货地址)</string>
    <string name="wallet_balance">钱包余额:</string>
    <string name="wallet_qz">钱包专区</string>
    <string name="pay_wallet">钱包支付</string>

    <!-- 商家类型 -->
    <string name="type_select">请选择您账户类型</string>
    <string name="type_producer">供应商</string>
    <string name="type_purchaser">采购商</string>
    <string name="type_shopper">C店店家</string>
    <string name="type_customer">顾客</string>

    <!-- 认证类型 -->
    <string name="type_personal">个人认证</string>
    <string name="type_enterprise">企业认证</string>

    <!-- tab标题 -->
    <string name="tab_find_title">发现</string>
    <string name="tab_type_title">分类</string>
    <string name="tab_home_title">首页</string>
    <string name="tab_newest_title">新品</string>
    <string name="tab_hot_title">消息</string>
    <string name="tab_show_title">购物车</string>
    <string name="tab_contact_title">我的</string>
    <string name="ptr_pull_to_refresh">下拉刷新...</string>
    <string name="ptr_release_to_refresh">松开刷新...</string>
    <string name="last_refresh">最近刷新</string>
    <string name="ptr_refreshing">加载中...</string>
    <string name="msg_signout">注销成功</string>
    <string name="msg_list_null">没有更多的数据</string>
    <string name="msg_network_anomaly">网络异常,请稍后再试</string>
    <string name="app_name01">最新</string>
    <string name="app_name02">遥控</string>
    <string name="app_name03">早教</string>
    <string name="app_name04">过家家</string>
    <string name="app_name05">童车</string>
    <string name="app_name06">益智</string>
    <string name="app_name07">其他</string>
    <string name="app_name1">我的淘竹马</string>
    <string name="app_name2">我是买家↑↓</string>
    <string name="app_name3">欢迎使用陶竹马</string>
    <string name="app_name4">点此登录</string>
    <string name="app_name5">新人注册</string>
    <string name="app_name6">待付款</string>
    <string name="app_name7">待发货</string>
    <string name="app_name8">已发货</string>
    <string name="app_name9">待评价</string>
    <string name="app_name10">我的订单</string>
    <string name="app_name11">地址管理</string>
    <string name="app_name12">我的购物车</string>
    <string name="app_name13">我的分销商品库</string>
    <string name="app_name14">我的收藏</string>
    <string name="app_name15">已买到的宝贝</string>
    <string name="app_name16">api申请</string>
    <string name="app_name17">退款维权</string>
    <string name="yaokongdiandongToys">遥控/电动玩具</string>
    <string name="zaojiaoyinyueToys">早教/音乐玩具</string>
    <string name="guojiajiaToys">过家家玩具</string>
    <string name="tongCheToys">童车玩具</string>
    <string name="yiZhiToys">益智玩具</string>
    <string name="ortherToys">其他玩具</string>
    <string name="action_settings">Settings</string>

    <!-- 登陆 -->
    <string name="login_tip">您好，您还没有登陆，请先登陆!</string>
    <!-- 注册 -->
    <string name="register_tip">注册成功</string>
    <string name="pay_method">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_tips">安全快捷，可支持银行卡支付</string>
    <string name="wechat">微信支付</string>
    <string name="wechat_tips">推荐已在微信绑定银行卡的用户使用</string>
    <string name="message_tips">给商家留言（45字以內）</string>
    <string name="activity_empty">活动结束</string>
    <string name="activity_bug">去抢购</string>
    <string name="activity_wait">即将开抢</string>
    <string name="buy">立即购买</string>
    <string name="check_product">勾选产品</string>
    <string name="fill_information">资料填写</string>
    <string name="product_management">产品管理</string>
    <string name="help_center">客服与帮助</string>
    <string name="vouchers">代金券</string>
    <string name="validity">有效期</string>
    <string name="rule">使用规则</string>
    <string name="input_tips">请输入代金券券号</string>
    <string name="activation">激活</string>
    <string name="vouchers_empty">没有券</string>
    <string name="submit_order">提交订单</string>
    <string name="vouchers_go">使用代金券</string>
    <string name="register">新人注册</string>
    <string name="login">立即登录</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="qqnum">QQ(必填)</string>
    <string name="sex">性别</string>
    <string name="sex_baby">宝宝性别</string>
    <string name="date_of_birth">出生日期</string>
    <string name="male">宝爸</string>
    <string name="female">宝妈</string>
    <string name="baby_birth">宝宝生日</string>
    <string name="sex_selection">请选择性别</string>
    <string name="cancel">取消</string>
    <string name="immediately_around">去抢购</string>
    <string name="empty_cart">您的购物车还是空的，添加点商品吧！</string>
    <string name="select_all">全选</string>
    <string name="settle_accounts">结算</string>
    <string name="total">总计：</string>
    <string name="money_zero">总计：¥ 0</string>
    <string name="dis_money_zero">为您节省：¥ 0</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="pay_now">立即付款</string>
    <string name="commented">已评论</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="view_logistics">查看物流</string>
    <string name="evaluation">评价</string>
    <string name="delete_orders">取消订单</string>
    <string name="cctually_paid">实付：</string>
    <string name="recipient_information">收货人信息</string>
    <string name="couponNo">代金券号：</string>
    <string name="help1">各种常见问题，帮助你迅速了解淘竹马</string>
    <string name="help2">优惠活动，选购商品、注册登录、支付方式等</string>
    <string name="help3">订单修改，物流查询、售后服务、退款操作等</string>
    <string name="help4">意见与建议，维权与投诉等</string>
    <string name="nitice">暂无退货记录\n 如果申请售后,可以在“订单详情”中申请 </string>
    <string name="sku_color">选择 颜色分类</string>
    <string name="sku_color1">颜色</string>
    <string name="sku_format">规格</string>
    <string name="app_string">距本场结束</string>
    <string name="event_title">限量购</string>
    <string name="empty_data">暂无数据</string>
    <string name="popularity">人气</string>
    <string name="price">价格</string>
    <string name="sales">销量</string>
    <string name="chesk1">退款成功</string>
    <string name="chesking">申请审核中</string>
    <string name="with">协商详情</string>
    <string name="refund_type">退款类型</string>
    <string name="refund_m">退款金额</string>
    <string name="refund_m1">退款金额:</string>
    <string name="refund_t">退款时间:</string>
    <string name="refund_y">退款原因</string>
    <string name="refund_s">退款说明</string>
    <string name="test_mj">卖家服务</string>
    <string name="test_wl">物流服务</string>
    <string name="test_ms">描述相符</string>
    <string name="consumer_service_item2">在线QQ咨询</string>
    <string name="empty_comment">暂无评论</string>
    <string name="itext">输入邀请码帮好友赚钱</string>
    <string name="itext1">请输入邀请码</string>
    <string name="itext2">立即兑换</string>
    <string name="itext3">立即去分享</string>
    <string name="itext4">先去花钱~</string>
    <string name="mywallet">我的钱包</string>
    <string name="cash">现金卷</string>
    <string name="Bamboo">竹叶</string>
    <string name="balance">余额</string>
    <string name="Invite_friends">邀请好友，立即赚钱</string>
    <string name="Input_invitation_code">输入邀请码</string>
    <string name="ljjs">立即结算</string>
    <string name="cgjrgwc">成功加入购物车</string>
    <string name="ren_qi">人气</string>
    <string name="jia_ge">价格</string>
    <string name="xiao_liang">销量</string>
    <string name="zong_he">综合</string>
    <string name="jx_pp">精选品牌</string>
    <string name="mei_ri_shi_jian">每日十件</string>
    <string name="TOP_pai_hang">TOP排行</string>
    <string name="qian_bao_zhuan_qu">钱包专区</string>
    <string name="da_pai_jia_dao">大牌驾到</string>
    <string name="geng_xin_ti_xing">每天 10:00 准时上新</string>
    <string name="jrtm">今日特卖</string>
    <string name="big_1">全场包邮</string>
    <string name="big_2">100%3C正品</string>
    <string name="big_3">24小时内发货</string>
    <string name="big_4">7天无理由退款</string>

</resources>