<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_bg" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/white" >

        <Button
            android:id="@+id/btn_head_left"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/icon_back2"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tab_show_title"
            android:textColor="@color/tzm_black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/rl_top"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shop_cart_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/empty_cart"
                    android:textColor="@color/tzm_text_sys_default_light"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_red_corner2"
                    android:ems="10"
                    android:padding="8dp"
                    android:text="@string/immediately_around"
                    android:textColor="@color/base"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/lv_cart_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#00000000"
            android:dividerHeight="0dp"
            android:visibility="gone" >
        </ListView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_line" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="#fefefe"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentTop="true"
            android:background="@color/gray_line" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line" />

        <CheckBox
            android:id="@+id/cb_allcheck"
            style="@style/CheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10.0dp" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/cb_allcheck"
            android:text="@string/select_all" />

        <Button
            android:id="@+id/btn_sumbit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/pink_solid_corner"
            android:ems="5"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/settle_accounts"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_holeprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/btn_sumbit"
            android:singleLine="true"
            android:text="@string/money_zero"
            android:textColor="@color/base" />

        <TextView
            android:id="@+id/dis_holeprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_holeprice"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/btn_sumbit"
            android:singleLine="true"
            android:text="@string/dis_money_zero"
            android:textColor="@color/tzm_text_sys_default"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>