<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_dialog_bg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/corner_white_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="选择支付方式"
            android:textColor="@color/tzm_text_sys_default"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray_line" />

            <TextView
                android:id="@+id/tv_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/pay_wallet"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/tv_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/alipay"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <View
            android:id="@+id/grayline"
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/wechat"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="取消"
            android:textSize="16sp" />
    </LinearLayout>

</FrameLayout>